# zed-tide

./: Cargo.toml  README.md  extension.toml  justfile
.zed/: settings.json
examples/: circle.tide
src/: lib.rs
